frontend/deployments/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fswd-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: fswd-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fswd-frontend
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      name: fswd-frontend
  template:
    metadata:
      labels:
        name: fswd-frontend
    spec:
      imagePullSecrets:
      - name: nssgitlab
      containers:
        - name: default
          image: asia.gcr.io/PROJECT_ID/IMAGE:TAG
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
