frontend/deployments/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fswd-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: fswd.devnss.com
    http:
      paths:
      - backend:
          serviceName: fswd-frontend
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - fswd.devnss.com
    secretName: wildcard-nativesrc-tls
